Structure updates & cleanup

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</script>
 		<script src="app/vendor/jquery-ui.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>		
-
+		
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>	
 		<script src="//code.angularjs.org/1.4.5/angular-cookies.js"></script>
 		<script src="//code.angularjs.org/1.4.5/angular-route.js"></script>
@@ -46,7 +46,9 @@
 		<script src="app/map-core.js"></script>
 		<script src="app/vendor/slideToggle.directive.js"></script>
 		<script src="app/app.js"></script>
-		<script src="app/constant.js"></script>
+		<script src="app/common/routes.js"></script>
+		<script src="app/common/constants.js"></script>
+		<script src="app/common/filters.js"></script>
 		<script src="app/map-svc.js"></script>
 		<script src="app/map-ctrl.js"></script>		
 		
